@@ -1,5 +1,10 @@
 2008-12-10  Bastien Nocera  <hadess@hadess.net>
 
+	* src/totem-playlist.c (playlist_remove_files): Remove
+	dead code
+
+2008-12-10  Bastien Nocera  <hadess@hadess.net>
+
 	* src/totem-uri.c (totem_uri_is_subtitle):
 	* src/totem-uri.h: Add totem_uri_is_subtitle() to check
 	whether a URI is a subtitle
